Mon Nov  9 18:47:22 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy, fairy.conf, conf.rb: MASTER_MAX_ACTIVE_PROCESSORプロパティ追加
	* master.rb, node.rb, controller.rb, processor.rb: [REQ#162]対応

Thu Nov  5 18:05:21 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* master.rb, node.rb, processor.rb, ntask.rb: [REQ#161]対応

Thu Oct 29 21:55:06 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* node.rb: デバッグ文挿入
	* bjob.rb, b-cat.rb: メドッド名修正
	* controller.rb, processor.rb, bjob.rb, b-input-iota.rb, ntask.rb:
	  [BUG#157]対応

Wed Oct 28 18:48:33 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* b-junction.rb: subが動作していなかった([BUG#160]). [REQ#102]対応洩れ
	* b-direct-product.rb, bjob.rb, local-file-input.rb,
	  n-input-varray.rb, nfile.rb, file-place.rb: 余分なコメントを削除

Wed Oct 28 16:34:07 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-find.rb: 無駄なpushがあった

Tue Oct 27 20:20:00 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* ntask.rb: 新規, [REQ#156]対応
	* controller.rb, b-cat.rb, b-join.rb, b-zipper.rb, bhere.rb, bjob.rb:
	  [REQ#156]対応
	* processor.rb, n-file-output.rb,  n-output-varray.rb,
	  njob.rb, : [REQ#156]対応
	* n-find.rb: [REQ#102]対応洩れ

Fri Oct 23 19:38:27 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-local-file-input.rb: 余分なデバッグメッセージを削除した.

Fri Oct 23 19:08:33 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* master.rb: terminate_controller controllerをちゃんと削除できてい
	  なかった.[BUG#153]

Fri Oct 23 17:15:21 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* here.rb, bhere.rb, port.rb: bhereを経由しないでclient(here)に直
	  接転送するようにした.[REQ#139]

Fri Oct 23 16:48:55 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb: Controller#init_policy BIotaPlaceで余分な処理が入っ
	  ていた
	* here.rb: GC対応の位置が間違っていた.

Fri Oct 23 16:16:34 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy-0.5.2-travel+ipv4 を(形式的に)マージ

Fri Oct 23 16:06:46 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* master.rb: ipv4-only対応

Tue Oct  6 19:38:26 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>
