@@ -38,15 +38,15 @@ module Fairy
 
 ##CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
 #  CONF.PREQUEUING_POLICY = {:queuing_class => :PoolQueue}
- CONF.PREQUEUING_POLICY = {:queuing_class => :ChunkedPoolQueue}
+# CONF.PREQUEUING_POLICY = {:queuing_class => :ChunkedPoolQueue}
 #  CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemorySizedPoolQueue}
-#  CONF.PREQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
+  CONF.PREQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
 ##CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
 #  CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
 #  CONF.POSTQUEUING_POLICY = {:queuing_class => :PoolQueue}
-  CONF.POSTQUEUING_POLICY = {:queuing_class => :ChunkedPoolQueue}
+#  CONF.POSTQUEUING_POLICY = {:queuing_class => :ChunkedPoolQueue}
 #  CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemorySizedPoolQueue}
-#  CONF.POSTQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
+  CONF.POSTQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
 
 ##CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 10000
   CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 80000
@@ -54,6 +54,7 @@ module Fairy
   CONF.POOLQUEUE_POOL_THRESHOLD = 4000
   CONF.ONMEMORY_SIZEDQUEUE_SIZE = 64000
 ##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
+#CONF.FILEBUFFEREDQUEUE_THRESHOLD = 100000/2
 
 ##CONF.LOCAL_INPUT_FILE_BUFFER_SIZE = 1024*1024
 ##CONF.HERE_POOL_THRESHOLD = 32000
@@ -68,8 +69,9 @@ module Fairy
 CONF.HASH_OPTIMIZE = true
 
 ##CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
-#CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
+CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
 ##CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
+#CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 100000
 
 ##CONF.BARRIER_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
   CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
@@ -119,6 +121,6 @@ CONF.HASH_OPTIMIZE = true
 #CONF.DEBUG_BUG49 = true
 
 ##CONF.PROCESS_LIFE_MANAGE_INTERVAL = nil
-#CONF.PROCESS_LIFE_MANAGE_INTERVAL = 120
+#CONF.PROCESS_LIFE_MANAGE_INTERVAL = 60
 
 end
